grammatik

match    := expr
expr     := group | counter | or_op  | multi | any_char | word[expr]
group    := (expr)
word     := char[word]
char     := any_char | a --> z | A --> Z | digit
counter  := word{digit}
any_char := .
digit    := 0->9[digit]
or_op    := word + word
multi    := word*
ignor    :expr"\I"
